--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "license": "ISC",
   "scripts": {
     "start": "node build/dist/index.js",
+    "heroku-prebuild": "npm install",
     "build": "tsc -p .",
     "dev": "nodemon --exec ts-node src/index.ts"
   },
