--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "mongoose": "^6.4.0",
     "passport": "^0.6.0",
     "passport-github": "^1.1.0",
-    "passport-google-oauth20": "^2.0.0"
+    "passport-google-oauth20": "^2.0.0",
+    "typescript": "^4.7.4"
   },
   "devDependencies": {
     "@types/cookie-parser": "^1.4.3",
@@ -37,7 +38,6 @@
     "@types/passport-google-oauth20": "^2.0.11",
     "nodemon": "^2.0.16",
     "ts-node": "^10.8.1",
-    "tsc": "^2.0.4",
-    "typescript": "^4.7.4"
+    "tsc": "^2.0.4"
   }
 }
