--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "license": "ISC",
   "scripts": {
     "start": "node build/dist/index.js",
-    "heroku-prebuild": "npm install",
+    "heroku-prebuild": "yarn install",
     "build": "tsc -p .",
     "dev": "nodemon --exec ts-node src/index.ts"
   },
