--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "license": "ISC",
   "scripts": {
     "start": "node build/dist/index.js",
-    "heroku-prebuild": "yarn install",
+    "heroku-prebuild": "npm install",
     "build": "tsc -p .",
     "dev": "nodemon --exec ts-node src/index.ts"
   },
@@ -25,9 +25,7 @@
     "passport": "^0.6.0",
     "passport-github": "^1.1.0",
     "passport-google-oauth20": "^2.0.0",
-    "typescript": "^4.7.4"
-  },
-  "devDependencies": {
+    "typescript": "^4.7.4",
     "@types/cookie-parser": "^1.4.3",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
