--- a/package.json
+++ b/package.json
@@ -16,16 +16,6 @@
     "dev": "nodemon --exec ts-node src/index.ts"
   },
   "dependencies": {
-    "cookie-parser": "^1.4.6",
-    "cors": "^2.8.5",
-    "dotenv": "^16.0.1",
-    "express": "^4.18.1",
-    "express-session": "^1.17.3",
-    "mongoose": "^6.4.0",
-    "passport": "^0.6.0",
-    "passport-github": "^1.1.0",
-    "passport-google-oauth20": "^2.0.0",
-    "typescript": "^4.7.4",
     "@types/cookie-parser": "^1.4.3",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
@@ -34,8 +24,17 @@
     "@types/passport": "^1.0.9",
     "@types/passport-github": "^1.1.7",
     "@types/passport-google-oauth20": "^2.0.11",
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.1",
+    "express": "^4.18.1",
+    "express-session": "^1.17.3",
+    "mongoose": "^6.4.0",
     "nodemon": "^2.0.16",
+    "passport": "^0.6.0",
+    "passport-github": "^1.1.0",
+    "passport-google-oauth20": "^2.0.0",
     "ts-node": "^10.8.1",
-    "tsc": "^2.0.4"
+    "typescript": "^4.7.4"
   }
 }
